# code-bridge

./: .gitignore  AGENTS.md  PHASE1-SUBSCRIPTION-IMPLEMENTATION.md  QUICKSTART.md  README.md  package-lock.json  package.json  tsup.config.ts
.github/workflows/: lang-parity-php-swift.yml  npm-release.yml
demo/: control-roundtrip.js  node-demo.js  pageview-demo.js  react-native-example.tsx  server.js  test-host-flow.js  test-singleton-lock.js  test-subscription-flow.js  web-demo.html  web-full-demo.html  workspace-bridge-demo.js
docs/: client-api-spec.md  clients.md  mcp.md  release-checklist.md  roblox.md  subscriptions.md  usage.md
docs/clients/: README.md  go.md  java.md  parity-report.md  php.md  python.md  ruby.md  rust.md  status-gaps.md  status.md  swift.md
docs/protocol/: README.md  testing.md
go/: README.md  go.mod
go/codebridge/: client.go  client_test.go
go/examples/: main.go
java/: README.md  pom.xml
lua/: CodeBridge.lua
php/: README.md  composer.json  phpunit.xml.dist
php/examples/: basic.php
php/tests/: ClientTest.php  smoke.php
protocol/: schema.json
python/: pyproject.toml  requirements.txt
python/code_bridge/: __init__.py  client.py
python/examples/: basic_usage.py
python/tests/: protocol_host.py  test_client.py
ruby/: Gemfile  README.md  code_bridge.gemspec
ruby/examples/: basic.rb
rust/: Cargo.toml  README.md
rust/examples/: basic.rs
rust/src/: lib.rs
rust/tests/: parity.rs  smoke.rs
src/: client.ts  index.ts  platform.ts  types.ts  websocket.ts
swift/: Package.swift  README.md
tools/: copy-lua-client.js
(+24 files in other folders)
